# better-config-rs

./: .editorconfig  .env  .env.dev  .env.nested  .env.prod  .env.sample  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  config-nested.json  config.ini  config.json  config.yml  release-plz.toml
.github/workflows/: ci.yaml  release-plz.yml
crates/config-core/: CHANGELOG.md  Cargo.toml
crates/config-core/src/: error.rs  lib.rs  traits.rs
crates/config-core/src/utils/: env.rs  misc.rs  mod.rs  override_env.rs
crates/config-derive/: CHANGELOG.md  Cargo.toml
crates/config-derive/src/: lib.rs
crates/config-loader/: CHANGELOG.md  Cargo.toml
crates/config-loader/src/: env.rs  ini.rs  json.rs  lib.rs  toml.rs  yml.rs
example/hello-better-config/: .env.prod  .env.staging  CHANGELOG.md  Cargo.toml
example/hello-better-config/src/: config.rs  main.rs
scripts/githooks/: pre-commit
src/: lib.rs
tests/: basic-args-prefix.rs  basic-args-target.rs  basic-from-str.rs  basic-getter.rs  basic-nested.rs  basic-params.rs  basic-with-derive.rs  basic.rs  custom_loader.rs  env-override-props.rs  env-override.rs  ini-basic.rs  json-basic.rs  json-nested.rs  nested-env-override.rs  nested-override-test.rs  toml-baisc.rs  yml-basic.rs
