[package]
name = "better-config-core"
version.workspace = true
categories.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dev-dependencies]
serial_test = "3.2.0"
