[package]
name = "better-config-derive"
version.workspace = true
categories.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = { version = "1.0", features = [] }
proc-macro2 = { version = "1.0", features = [] }

