[package]
name = "better-config-loader"
version.workspace = true
categories.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["full"]
env = ["dep:dotenvy"]
toml = ["dep:toml"]
full = ["env", "toml"]

[dependencies]
better-config-core.workspace = true
dotenvy = { version = "0.15.7", optional = true }
toml = { version = "0.8.23", optional = true }
