[package]
name = "better-config-loader"
version.workspace = true
categories.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["full"]
env = ["dep:dotenvy"]
toml = ["dep:toml"]
json = ["dep:serde_json"]
yml = ["dep:serde_yml"]
full = ["env", "toml", "json", "yml"]

[dependencies]
better-config-core.workspace = true
dotenvy = { version = "0.15.7", optional = true }
toml = { version = "0.8.23", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yml = { version = "0.0.12", optional = true }
