[package]
name = "hello-better-config"
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
better-config = { path = "../../", features = ["env"] }